# ecg_processing

./: .gitignore  README.md  config.json  main.py  pyproject.toml  qrs_detection.py
Resources/: Parameters.csv
data_loader/: mediconnect_loader.py  mimic_loader.py  ukbiobank_loader.py
modules/: delineation.py  feature_extraction.py  r_peak_detection.py
neurokit/: ecg_analysis.py  main.py  pipeline_mimic.py  pipeline_ukbiobank.py  utils.py
neurokit_workflow/: README.md  config.json  main.py  pipeline_mimic.py  pipeline_ukbiobank.py  requirements.txt  utils.py
neurokit_workflow/data_loader/: mediconnect_loader.py
neurokit_workflow/modules/: delineation.py  feature_extraction.py  r_peak_detection.py
wfdb_workflow/: dicom_plotter.py  main.py  plot_controller_widget.py  wp4_analyzer.py
